--- a/RestAssured/test-output/index.html
+++ b/RestAssured/test-output/index.html
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\komehta\AppData\Local\Temp\testng-eclipse--2044796035\testng-customsuite.xml</span>
+                    <span>C:\Users\komehta\AppData\Local\Temp\testng-eclipse--1905319363\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -91,7 +91,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">1 method,   1 passed</span>
+                    <span class="method-stats">2 methods,   2 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -102,7 +102,12 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="RestAssuredProject.AbusiveExperienceAPITest" class="method navigator-link" hash-for-method="AbusiveExperienceTestRun">AbusiveExperienceTestRun</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="RestAssuredProject.AbusiveExperienceAPITest" class="method navigator-link" hash-for-method="AbusiveStatusTestRun(amazon)">AbusiveStatusTestRun(amazon)</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="RestAssuredProject.AbusiveExperienceAPITest" class="method navigator-link" hash-for-method="ViolatingSitesTestRun">ViolatingSitesTestRun</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -125,9 +130,17 @@
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="AbusiveExperienceTestRun">
-                  </a> <!-- AbusiveExperienceTestRun -->
-                  <span class="method-name">AbusiveExperienceTestRun</span>
+                  <a name="AbusiveStatusTestRun(amazon)">
+                  </a> <!-- AbusiveStatusTestRun(amazon) -->
+                  <span class="method-name">AbusiveStatusTestRun</span>
+                  <span class="parameters">(amazon)</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="ViolatingSitesTestRun">
+                  </a> <!-- ViolatingSitesTestRun -->
+                  <span class="method-name">ViolatingSitesTestRun</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -135,7 +148,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\komehta\AppData\Local\Temp\testng-eclipse--2044796035\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\komehta\AppData\Local\Temp\testng-eclipse--1905319363\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -184,16 +197,20 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(1);
+data.addRows(2);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'AbusiveExperienceTestRun')
+data.setCell(0, 1, 'ViolatingSitesTestRun')
 data.setCell(0, 2, 'RestAssuredProject.AbusiveExperienceAPITest')
-data.setCell(0, 3, 10365);
+data.setCell(0, 3, 7073);
+data.setCell(1, 0, 1)
+data.setCell(1, 1, 'AbusiveStatusTestRun')
+data.setCell(1, 2, 'RestAssuredProject.AbusiveExperienceAPITest')
+data.setCell(1, 3, 4449);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 10 seconds</span>
+              <span class="suite-total-time">Total running time: 11 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -221,8 +238,12 @@ return data;
             <div class="chronological-class">
               <div class="chronological-class-name">RestAssuredProject.AbusiveExperienceAPITest</div> <!-- chronological-class-name -->
               <div class="test-method">
-                <span class="method-name">AbusiveExperienceTestRun</span>
+                <span class="method-name">AbusiveStatusTestRun(amazon)</span>
                 <span class="method-start">0 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">ViolatingSitesTestRun</span>
+                <span class="method-start">4458 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
