--- a/RestAssured/test-output/old/Default suite/classes.html
+++ b/RestAssured/test-output/old/Default suite/classes.html
@@ -4,18 +4,18 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>RestAssuredProject.AbusiveExperienceAPITest</td>
+<td>RestAssuredProject.GmailAPITest</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>AbusiveStatusTestRun</td>
+<td>OauthRun2</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>ViolatingSitesTestRun</td>
+<td>getCode</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
