--- a/RestAssured/test-output/old/Default suite/methods-alphabetical.html
+++ b/RestAssured/test-output/old/Default suite/methods-alphabetical.html
@@ -1,8 +1,6 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="826d77">  <td>19/11/11 21:34:11</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbusiveExperienceAPITest.AbusiveStatusTestRun(java.lang.String)[pri:0, instance:RestAssuredProject.AbusiveExperienceAPITest@3c72f59f]">AbusiveStatusTestRun</td> 
-  <td>main@1923598304</td>   <td></td> </tr>
-<tr bgcolor="826d77">  <td>19/11/11 21:34:15</td>   <td>4459</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbusiveExperienceAPITest.ViolatingSitesTestRun()[pri:0, instance:RestAssuredProject.AbusiveExperienceAPITest@3c72f59f]">ViolatingSitesTestRun</td> 
-  <td>main@1923598304</td>   <td></td> </tr>
+<tr bgcolor="f69090">  <td>19/11/14 19:59:39</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GmailAPITest.getCode()[pri:0, instance:RestAssuredProject.GmailAPITest@4445629]">getCode</td> 
+  <td>main@1585635178</td>   <td></td> </tr>
 </table>
