Adding the commit for Calendar,TaskList API tests

--- a/RestAssured/test-output/old/Default suite/methods-not-run.html
+++ b/RestAssured/test-output/old/Default suite/methods-not-run.html
@@ -1,3 +1,6 @@
 <h2>Methods that were not run</h2><table>
-<tr><td>RestAssuredProject.GmailAPITest.OauthRun2</td></tr>
+<tr><td>RestAssuredProject.CalendarAPITest.getCalendarEventListTest</td></tr>
+<tr><td>RestAssuredProject.CalendarAPITest.getCalendarListTest</td></tr>
+<tr><td>RestAssuredProject.CalendarAPITest.getCalendarColorsTest</td></tr>
+<tr><td>RestAssuredProject.CalendarAPITest.getCalendarTest</td></tr>
 </table>
