--- a/RestAssured/test-output/old/Default suite/classes.html
+++ b/RestAssured/test-output/old/Default suite/classes.html
@@ -4,18 +4,34 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>RestAssuredProject.GmailAPITest</td>
+<td>RestAssuredProject.CalendarAPITest</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>OauthRun2</td>
+<td>createAnEventTest</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>getCode</td>
+<td>getCalendarEventListTest</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>getCalendarListTest</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>getCalendarColorsTest</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>getCalendarTest</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>listUserCalendarSettingsTest</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
