--- a/RestAssured/test-output/old/Default suite/methods-alphabetical.html
+++ b/RestAssured/test-output/old/Default suite/methods-alphabetical.html
@@ -1,6 +1,8 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="f69090">  <td>19/11/14 19:59:39</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GmailAPITest.getCode()[pri:0, instance:RestAssuredProject.GmailAPITest@4445629]">getCode</td> 
-  <td>main@1585635178</td>   <td></td> </tr>
+<tr bgcolor="f69090">  <td>19/11/18 16:14:50</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CalendarAPITest.createAnEventTest()[pri:5, instance:RestAssuredProject.CalendarAPITest@43301423]">createAnEventTest</td> 
+  <td>main@365181913</td>   <td></td> </tr>
+<tr bgcolor="f69090">  <td>19/11/18 16:14:52</td>   <td>2793</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CalendarAPITest.listUserCalendarSettingsTest()[pri:6, instance:RestAssuredProject.CalendarAPITest@43301423]">listUserCalendarSettingsTest</td> 
+  <td>main@365181913</td>   <td></td> </tr>
 </table>
