Adding the assertions for Calendar API with detailed comments

--- a/RestAssured/test-output/index.html
+++ b/RestAssured/test-output/index.html
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\komehta\AppData\Local\Temp\testng-eclipse--367785157\testng-customsuite.xml</span>
+                    <span>C:\Users\komehta\AppData\Local\Temp\testng-eclipse--53047529\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -91,7 +91,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">2 methods,   2 passed</span>
+                    <span class="method-stats">6 methods,   6 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -103,6 +103,26 @@
                       <span>
                         <img src="passed.png" width="3%"/>
                         <a href="#" panel-name="suite-Default_suite" title="RestAssuredProject.CalendarAPITest" class="method navigator-link" hash-for-method="createAnEventTest">createAnEventTest</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="RestAssuredProject.CalendarAPITest" class="method navigator-link" hash-for-method="getCalendarColorsTest">getCalendarColorsTest</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="RestAssuredProject.CalendarAPITest" class="method navigator-link" hash-for-method="getCalendarEventListTest">getCalendarEventListTest</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="RestAssuredProject.CalendarAPITest" class="method navigator-link" hash-for-method="getCalendarListTest">getCalendarListTest</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="RestAssuredProject.CalendarAPITest" class="method navigator-link" hash-for-method="getCalendarTest">getCalendarTest</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
@@ -137,6 +157,34 @@
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
+                  <a name="getCalendarColorsTest">
+                  </a> <!-- getCalendarColorsTest -->
+                  <span class="method-name">getCalendarColorsTest</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="getCalendarEventListTest">
+                  </a> <!-- getCalendarEventListTest -->
+                  <span class="method-name">getCalendarEventListTest</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="getCalendarListTest">
+                  </a> <!-- getCalendarListTest -->
+                  <span class="method-name">getCalendarListTest</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="getCalendarTest">
+                  </a> <!-- getCalendarTest -->
+                  <span class="method-name">getCalendarTest</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
                   <a name="listUserCalendarSettingsTest">
                   </a> <!-- listUserCalendarSettingsTest -->
                   <span class="method-name">listUserCalendarSettingsTest</span>
@@ -147,7 +195,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\komehta\AppData\Local\Temp\testng-eclipse--367785157\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\komehta\AppData\Local\Temp\testng-eclipse--53047529\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -196,20 +244,36 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(2);
+data.addRows(6);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'createAnEventTest')
+data.setCell(0, 1, 'getCalendarEventListTest')
 data.setCell(0, 2, 'RestAssuredProject.CalendarAPITest')
-data.setCell(0, 3, 2781);
+data.setCell(0, 3, 1069);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'listUserCalendarSettingsTest')
+data.setCell(1, 1, 'createAnEventTest')
 data.setCell(1, 2, 'RestAssuredProject.CalendarAPITest')
-data.setCell(1, 3, 749);
+data.setCell(1, 3, 1022);
+data.setCell(2, 0, 2)
+data.setCell(2, 1, 'getCalendarListTest')
+data.setCell(2, 2, 'RestAssuredProject.CalendarAPITest')
+data.setCell(2, 3, 971);
+data.setCell(3, 0, 3)
+data.setCell(3, 1, 'getCalendarColorsTest')
+data.setCell(3, 2, 'RestAssuredProject.CalendarAPITest')
+data.setCell(3, 3, 688);
+data.setCell(4, 0, 4)
+data.setCell(4, 1, 'getCalendarTest')
+data.setCell(4, 2, 'RestAssuredProject.CalendarAPITest')
+data.setCell(4, 3, 671);
+data.setCell(5, 0, 5)
+data.setCell(5, 1, 'listUserCalendarSettingsTest')
+data.setCell(5, 2, 'RestAssuredProject.CalendarAPITest')
+data.setCell(5, 3, 637);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 3 seconds</span>
+              <span class="suite-total-time">Total running time: 5 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -224,22 +288,9 @@ return data;
         </div> <!-- panel -->
         <div panel-name="ignored-methods-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">4 ignored methods</span>
+            <span class="header-content">0 ignored methods</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
-            <div class="ignored-class-div">
-              <span class="ignored-class-name">RestAssuredProject.CalendarAPITest</span>
-              <div class="ignored-methods-div">
-                <span class="ignored-method-name">getCalendarEventListTest</span>
-                <br/>
-                <span class="ignored-method-name">getCalendarListTest</span>
-                <br/>
-                <span class="ignored-method-name">getCalendarColorsTest</span>
-                <br/>
-                <span class="ignored-method-name">getCalendarTest</span>
-                <br/>
-              </div> <!-- ignored-methods-div -->
-            </div> <!-- ignored-class-div -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
         <div panel-name="chronological-Default_suite" class="panel">
@@ -249,13 +300,33 @@ return data;
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
               <div class="chronological-class-name">RestAssuredProject.CalendarAPITest</div> <!-- chronological-class-name -->
-              <div class="test-method">
-                <span class="method-name">createAnEventTest</span>
+              <div class="configuration-test before">
+                <span class="method-name">gettingAuthToken</span>
                 <span class="method-start">0 ms</span>
+              </div> <!-- configuration-test before -->
+              <div class="test-method">
+                <span class="method-name">getCalendarListTest</span>
+                <span class="method-start">28679 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">getCalendarTest</span>
+                <span class="method-start">29659 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">getCalendarColorsTest</span>
+                <span class="method-start">30333 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">getCalendarEventListTest</span>
+                <span class="method-start">31024 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">listUserCalendarSettingsTest</span>
-                <span class="method-start">2791 ms</span>
+                <span class="method-start">32099 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">createAnEventTest</span>
+                <span class="method-start">32739 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
