--- a/RestAssured/test-output/emailable-report.html
+++ b/RestAssured/test-output/emailable-report.html
@@ -9,11 +9,15 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="7">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">2</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">3,597</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">6</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">33,775</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="2">RestAssuredProject.CalendarAPITest</td><td><a href="#m0">createAnEventTest</a></td><td rowspan="1">1574073890175</td><td rowspan="1">2781</td></tr><tr class="passedeven"><td><a href="#m1">listUserCalendarSettingsTest</a></td><td rowspan="1">1574073892966</td><td rowspan="1">749</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="6">RestAssuredProject.CalendarAPITest</td><td><a href="#m0">createAnEventTest</a></td><td rowspan="1">1574178591727</td><td rowspan="1">1022</td></tr><tr class="passedeven"><td><a href="#m1">getCalendarColorsTest</a></td><td rowspan="1">1574178589321</td><td rowspan="1">688</td></tr><tr class="passedeven"><td><a href="#m2">getCalendarEventListTest</a></td><td rowspan="1">1574178590012</td><td rowspan="1">1069</td></tr><tr class="passedeven"><td><a href="#m3">getCalendarListTest</a></td><td rowspan="1">1574178587667</td><td rowspan="1">971</td></tr><tr class="passedeven"><td><a href="#m4">getCalendarTest</a></td><td rowspan="1">1574178588647</td><td rowspan="1">671</td></tr><tr class="passedeven"><td><a href="#m5">listUserCalendarSettingsTest</a></td><td rowspan="1">1574178591087</td><td rowspan="1">637</td></tr></tbody>
 </table>
 <h2>Default test</h2><h3 id="m0">RestAssuredProject.CalendarAPITest#createAnEventTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">RestAssuredProject.CalendarAPITest#listUserCalendarSettingsTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">RestAssuredProject.CalendarAPITest#getCalendarColorsTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m2">RestAssuredProject.CalendarAPITest#getCalendarEventListTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m3">RestAssuredProject.CalendarAPITest#getCalendarListTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m4">RestAssuredProject.CalendarAPITest#getCalendarTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m5">RestAssuredProject.CalendarAPITest#listUserCalendarSettingsTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
