--- a/RestAssured/test-output/old/Default suite/methods-alphabetical.html
+++ b/RestAssured/test-output/old/Default suite/methods-alphabetical.html
@@ -1,8 +1,18 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="f69090">  <td>19/11/18 16:14:50</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CalendarAPITest.createAnEventTest()[pri:5, instance:RestAssuredProject.CalendarAPITest@43301423]">createAnEventTest</td> 
-  <td>main@365181913</td>   <td></td> </tr>
-<tr bgcolor="f69090">  <td>19/11/18 16:14:52</td>   <td>2793</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CalendarAPITest.listUserCalendarSettingsTest()[pri:6, instance:RestAssuredProject.CalendarAPITest@43301423]">listUserCalendarSettingsTest</td> 
-  <td>main@365181913</td>   <td></td> </tr>
+<tr bgcolor="f69090">  <td>19/11/19 21:19:51</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CalendarAPITest.createAnEventTest()[pri:6, instance:RestAssuredProject.CalendarAPITest@1ffe63b9]">createAnEventTest</td> 
+  <td>main@644345897</td>   <td></td> </tr>
+<tr bgcolor="f69090">  <td>19/11/19 21:19:49</td>   <td>-2406</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CalendarAPITest.getCalendarColorsTest()[pri:3, instance:RestAssuredProject.CalendarAPITest@1ffe63b9]">getCalendarColorsTest</td> 
+  <td>main@644345897</td>   <td></td> </tr>
+<tr bgcolor="f69090">  <td>19/11/19 21:19:50</td>   <td>-1715</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CalendarAPITest.getCalendarEventListTest()[pri:4, instance:RestAssuredProject.CalendarAPITest@1ffe63b9]">getCalendarEventListTest</td> 
+  <td>main@644345897</td>   <td></td> </tr>
+<tr bgcolor="f69090">  <td>19/11/19 21:19:47</td>   <td>-4060</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CalendarAPITest.getCalendarListTest()[pri:1, instance:RestAssuredProject.CalendarAPITest@1ffe63b9]">getCalendarListTest</td> 
+  <td>main@644345897</td>   <td></td> </tr>
+<tr bgcolor="f69090">  <td>19/11/19 21:19:48</td>   <td>-3080</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CalendarAPITest.getCalendarTest()[pri:2, instance:RestAssuredProject.CalendarAPITest@1ffe63b9]">getCalendarTest</td> 
+  <td>main@644345897</td>   <td></td> </tr>
+<tr bgcolor="f69090">  <td>19/11/19 21:19:18</td>   <td>-32731</td> <td>&nbsp;</td><td title="&gt;&gt;CalendarAPITest.gettingAuthToken()[pri:0, instance:RestAssuredProject.CalendarAPITest@1ffe63b9]">&gt;&gt;gettingAuthToken</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@644345897</td>   <td></td> </tr>
+<tr bgcolor="f69090">  <td>19/11/19 21:19:51</td>   <td>-640</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CalendarAPITest.listUserCalendarSettingsTest()[pri:5, instance:RestAssuredProject.CalendarAPITest@1ffe63b9]">listUserCalendarSettingsTest</td> 
+  <td>main@644345897</td>   <td></td> </tr>
 </table>
