--- a/RestAssured/test-output/old/Default suite/methods-alphabetical.html
+++ b/RestAssured/test-output/old/Default suite/methods-alphabetical.html
@@ -1,22 +1,6 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="f69090">  <td>19/11/20 15:43:33</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GmailAPITest.createDraftinGmail()[pri:9, instance:RestAssuredProject.GmailAPITest@2bbf180e]">createDraftinGmail</td> 
-  <td>main@961712517</td>   <td></td> </tr>
-<tr bgcolor="f69090">  <td>19/11/20 15:43:32</td>   <td>-867</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GmailAPITest.deleteDraftMessage()[pri:8, instance:RestAssuredProject.GmailAPITest@2bbf180e]">deleteDraftMessage</td> 
-  <td>main@961712517</td>   <td></td> </tr>
-<tr bgcolor="f69090">  <td>19/11/20 15:43:29</td>   <td>-3990</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GmailAPITest.deleteMessageFromGmail()[pri:4, instance:RestAssuredProject.GmailAPITest@2bbf180e]">deleteMessageFromGmail</td> 
-  <td>main@961712517</td>   <td></td> </tr>
-<tr bgcolor="f69090">  <td>19/11/20 15:43:22</td>   <td>-10411</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GmailAPITest.getCurrentUserProfile()[pri:1, instance:RestAssuredProject.GmailAPITest@2bbf180e]">getCurrentUserProfile</td> 
-  <td>main@961712517</td>   <td></td> </tr>
-<tr bgcolor="f69090">  <td>19/11/20 15:43:31</td>   <td>-1718</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GmailAPITest.getDraftMessage()[pri:7, instance:RestAssuredProject.GmailAPITest@2bbf180e]">getDraftMessage</td> 
-  <td>main@961712517</td>   <td></td> </tr>
-<tr bgcolor="f69090">  <td>19/11/20 15:43:28</td>   <td>-5011</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GmailAPITest.getUserMessages()[pri:3, instance:RestAssuredProject.GmailAPITest@2bbf180e]">getUserMessages</td> 
-  <td>main@961712517</td>   <td></td> </tr>
-<tr bgcolor="f69090">  <td>19/11/20 15:43:30</td>   <td>-2497</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GmailAPITest.listUserDraftMessage()[pri:6, instance:RestAssuredProject.GmailAPITest@2bbf180e]">listUserDraftMessage</td> 
-  <td>main@961712517</td>   <td></td> </tr>
-<tr bgcolor="f69090">  <td>19/11/20 15:43:27</td>   <td>-6071</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GmailAPITest.listUserMessages()[pri:2, instance:RestAssuredProject.GmailAPITest@2bbf180e]">listUserMessages</td> 
-  <td>main@961712517</td>   <td></td> </tr>
-<tr bgcolor="f69090">  <td>19/11/20 15:43:30</td>   <td>-3039</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GmailAPITest.sendEmailfromGmail()[pri:5, instance:RestAssuredProject.GmailAPITest@2bbf180e]">sendEmailfromGmail</td> 
-  <td>main@961712517</td>   <td></td> </tr>
+<tr bgcolor="f69090">  <td>19/11/20 16:31:54</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbusiveExperienceAPITest.ViolatingSitesTestRun()[pri:1, instance:RestAssuredProject.AbusiveExperienceAPITest@18ce0030]">ViolatingSitesTestRun</td> 
+  <td>main@1353070773</td>   <td></td> </tr>
 </table>
