--- a/RestAssured/test-output/old/Default suite/methods-alphabetical.html
+++ b/RestAssured/test-output/old/Default suite/methods-alphabetical.html
@@ -1,6 +1,28 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="f69090">  <td>19/11/20 16:31:54</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbusiveExperienceAPITest.ViolatingSitesTestRun()[pri:1, instance:RestAssuredProject.AbusiveExperienceAPITest@18ce0030]">ViolatingSitesTestRun</td> 
-  <td>main@1353070773</td>   <td></td> </tr>
+<tr bgcolor="67c67e">  <td>20/01/20 21:40:43</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GmailAPITest.createDraftinGmail()[pri:9, instance:RestAssuredProject.GmailAPITest@6ee52dcd]">createDraftinGmail</td> 
+  <td>main@1121453612</td>   <td></td> </tr>
+<tr bgcolor="67c67e">  <td>20/01/20 21:40:41</td>   <td>-1881</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GmailAPITest.deleteDraftMessage()[pri:8, instance:RestAssuredProject.GmailAPITest@6ee52dcd]">deleteDraftMessage</td> 
+  <td>main@1121453612</td>   <td></td> </tr>
+<tr bgcolor="67c67e">  <td>20/01/20 21:40:37</td>   <td>-6545</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GmailAPITest.deleteMessageFromGmail()[pri:4, instance:RestAssuredProject.GmailAPITest@6ee52dcd]">deleteMessageFromGmail</td> 
+  <td>main@1121453612</td>   <td></td> </tr>
+<tr bgcolor="67c67e">  <td>20/01/20 21:40:33</td>   <td>-10772</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GmailAPITest.getCurrentUserProfile()[pri:1, instance:RestAssuredProject.GmailAPITest@6ee52dcd]">getCurrentUserProfile</td> 
+  <td>main@1121453612</td>   <td></td> </tr>
+<tr bgcolor="67c67e">  <td>20/01/20 21:40:40</td>   <td>-2999</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GmailAPITest.getDraftMessage()[pri:7, instance:RestAssuredProject.GmailAPITest@6ee52dcd]">getDraftMessage</td> 
+  <td>main@1121453612</td>   <td></td> </tr>
+<tr bgcolor="67c67e">  <td>20/01/20 21:40:36</td>   <td>-7620</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GmailAPITest.getUserMessages()[pri:3, instance:RestAssuredProject.GmailAPITest@6ee52dcd]">getUserMessages</td> 
+  <td>main@1121453612</td>   <td></td> </tr>
+<tr bgcolor="67c67e">  <td>20/01/20 21:39:58</td>   <td>-45179</td> <td>&nbsp;</td><td title="&gt;&gt;GmailAPITest.gettingAuthToken()[pri:0, instance:RestAssuredProject.GmailAPITest@6ee52dcd]">&gt;&gt;gettingAuthToken</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1121453612</td>   <td></td> </tr>
+<tr bgcolor="67c67e">  <td>20/01/20 21:40:39</td>   <td>-3989</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GmailAPITest.listUserDraftMessage()[pri:6, instance:RestAssuredProject.GmailAPITest@6ee52dcd]">listUserDraftMessage</td> 
+  <td>main@1121453612</td>   <td></td> </tr>
+<tr bgcolor="67c67e">  <td>20/01/20 21:40:34</td>   <td>-8919</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GmailAPITest.listUserMessages()[pri:2, instance:RestAssuredProject.GmailAPITest@6ee52dcd]">listUserMessages</td> 
+  <td>main@1121453612</td>   <td></td> </tr>
+<tr bgcolor="a5fe93">  <td>20/01/20 21:39:58</td>   <td>-45418</td> <td title="&gt;&gt;BaseClass.reportSetup()[pri:0, instance:RestAssuredProject.GmailAPITest@6ee52dcd]">&gt;&gt;reportSetup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1121453612</td>   <td></td> </tr>
+<tr bgcolor="a5fe93">  <td>20/01/20 21:40:44</td>   <td>342</td> <td title="&lt;&lt;BaseClass.reportTearDown()[pri:0, instance:RestAssuredProject.GmailAPITest@6ee52dcd]">&lt;&lt;reportTearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1121453612</td>   <td></td> </tr>
+<tr bgcolor="67c67e">  <td>20/01/20 21:40:39</td>   <td>-4434</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GmailAPITest.sendEmailfromGmail()[pri:5, instance:RestAssuredProject.GmailAPITest@6ee52dcd]">sendEmailfromGmail</td> 
+  <td>main@1121453612</td>   <td></td> </tr>
 </table>
